--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,26 @@ display: flex;
 }
 
 .container { 
-    background-color: black;
+    background: color #000;;
     width: 350px;
     border-radius: 10px;
     padding: 25px;
+}
+
+.calc-text {
+   margin-bottom: 20px; 
+   padding-left: 5px;
+}
+
+.calc-text p {
+color:white;
+width: 100%;
+font-size: 3.5rem;
+text-align:end;
+background-color: transparent;
+border: none;
+outline: none;
+word-wrap: break-word;
+word-break: break-all;
+
 }
