--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,30 @@
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
- font-family: Arial, Helvetica, sans-serif;   
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body {
-background-color: #8bc6ec;
-min-height: 100vh;
-align-items: center;
-justify-content: center;
-display: flex;
+.calculator-grid {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.container { 
-    background: color #000;;
-    width: 350px;
-    border-radius: 10px;
-    padding: 25px;
+.output {
+    background-color: black;
+    grid-column: 1 / -1;
+    display: flex;
+    align-items: end;
+    justify-content: space-around;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
-.calc-text {
-   margin-bottom: 20px; 
-   padding-left: 5px;
-}
-
-.calc-text p {
-color:white;
-width: 100%;
-font-size: 3.5rem;
-text-align:end;
-background-color: transparent;
-border: none;
-outline: none;
-word-wrap: break-word;
-word-break: break-all;
-
+.output.previous-operand {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 1.5rem;
 }
