--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #9999ff;
+}
+
 .calculator-grid {
     display: grid;
     justify-content: center;
@@ -28,3 +32,15 @@
     color: rgba(255, 255, 255, 0.75);
     font-size: 1.5rem;
 }
+
+
+.calculator-grid > button {
+border: 1px solid #fff;
+cursor: pointer;
+}
+
+.calculator-grid > button:hover{
+    background-color: rgb(255, 0, 0);
+    
+}
+
